mock-2/q8-multipod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: multi-pod
  name: multi-pod
spec:
  containers:
  - image: busybox
    name: jupiter
  - image: nginx
    name: europa
    command:
    - sleep
    - "4800"
