mock-2/q1-service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: front-end-service
  name: front-end-service
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 30083
    nodePort: 30083
  selector:
    app: front-end-service
  type: NodePort
